--- a/users/static/users/css/style.css
+++ b/users/static/users/css/style.css
@@ -172,5 +172,39 @@ header .header-in-nav-navbar-items-link:hover {
 }
 
 /* /FORMS */
+/* POPUP */
+.popup-logout {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  max-width: 320px;
+  width: 100%;
+  height: 150px;
+  margin: 0 auto;
+  border-radius: 10px;
+}
+.popup-logout-in-title {
+  text-align: center;
+  margin: 0 0 30px 0;
+}
+.popup-logout-in-title-text {
+  font-size: 30px;
+}
+.popup-logout-in-login {
+  text-align: center;
+}
+.popup-logout-in-login-btn {
+  margin: 0 10px 0 10px;
+  font-size: 25px;
+  color: black;
+}
+.popup-logout-in-login-btn:hover {
+  text-decoration: underline;
+}
+
+/* /POPUP */
 
 /*# sourceMappingURL=style.css.map */
