--- a/users/static/users/css/style.scss
+++ b/users/static/users/css/style.scss
@@ -187,3 +187,42 @@ header{
 }
 
 /* /FORMS */
+
+/* POPUP */
+.popup{
+
+  &-logout{
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    max-width: 320px;
+    width: 100%;
+    height: 150px;
+    margin: 0 auto;
+    border-radius: 10px;
+    &-in{
+      &-title{
+        text-align: center;
+        margin: 0 0 30px 0;
+        &-text{
+          font-size: 30px;
+        }
+      }
+      &-login{
+        text-align: center;
+        &-btn{
+          margin: 0 10px 0 10px;
+          font-size: 25px;
+          color: black;
+          &:hover{
+            text-decoration: underline;
+          }
+        }
+      }
+    }
+  }
+}
+/* /POPUP */
