--- a/users/static/users/css/style.css
+++ b/users/static/users/css/style.css
@@ -155,6 +155,24 @@ header .header-in-nav-navbar-items-link:hover {
   text-align: center;
   align-items: center;
 }
+.form-login-input {
+  max-width: 800px;
+  width: 100%;
+  height: 47px;
+  background: black;
+  color: #fff;
+  border: 1px #000 solid;
+  font-size: 25px;
+  font-family: "Rajdhani", sans-serif;
+  font-weight: 400;
+  outline: none;
+}
+.form-login-input:active {
+  border: 1px white solid;
+}
+.form-login-input:hover {
+  border: 1px white solid;
+}
 .form-login-submit {
   max-width: 800px;
   width: 100%;
@@ -173,6 +191,22 @@ header .header-in-nav-navbar-items-link:hover {
 
 /* /FORMS */
 /* POPUP */
+.popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  overflow: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  z-index: 99;
+  padding: 30px 0;
+}
 .popup-logout {
   display: none;
   position: fixed;
@@ -206,5 +240,7 @@ header .header-in-nav-navbar-items-link:hover {
 }
 
 /* /POPUP */
+/* ICONS */
+/* /ICONS */
 
 /*# sourceMappingURL=style.css.map */
