--- a/users/static/users/css/style.scss
+++ b/users/static/users/css/style.scss
@@ -168,6 +168,24 @@ header{
   &-login{
     text-align: center;
     align-items: center;
+    &-input{
+      max-width: 800px;
+      width: 100%;
+      height: 47px;
+      background: black;
+      color: #fff;
+      border: 1px #000 solid;
+      font-size: 25px;
+      font-family: 'Rajdhani', sans-serif;
+      font-weight: 400;
+      outline: none;
+      &:active{
+        border: 1px white solid;
+      }
+      &:hover{
+        border: 1px white solid;
+      }
+    }
     &-submit{
       max-width: 800px;
       width: 100%;
@@ -190,7 +208,20 @@ header{
 
 /* POPUP */
 .popup{
-
+    display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    overflow: hidden;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    z-index: 99;
+    padding:30px 0;
   &-logout{
     display: none;
     position: fixed;
@@ -226,3 +257,7 @@ header{
   }
 }
 /* /POPUP */
+
+/* ICONS */
+
+/* /ICONS */
