--- a/templates/home.html
+++ b/templates/home.html
@@ -17,17 +17,7 @@
             </div>
             <div class="content-in">
                 <nav class="content-in-homenav">
-                    <a href="#" class="content-in-homenav-items">
-                        <ul class="content-in-homenav-items-link">
-                            link
-                        </ul>
-                    </a>
-                    <a href="#" class="content-in-homenav-items">
-                        <ul class="content-in-homenav-items-link">
-                            link
-                        </ul>
-                    </a>
-                    <a href="#" class="content-in-homenav-items">
+                    <a href="" class="content-in-homenav-items">
                         <ul class="content-in-homenav-items-link">
                             link
                         </ul>
