--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -8,7 +8,7 @@
         <div class="container">
             <div class="common-subtitle">
                 <div class="content-profile-header">
-                    <h1 class="common-subtitle-text">Profile {{ user.get_username }}
+                    <h1 class="common-subtitle-text">Profile {{ profile.username }}
                     </h1>
                     {% if user.is_staff == True %}
                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-check2-all bi-moderator" viewBox="0 0 16 16" onclick="moderator_icon();">
@@ -31,10 +31,10 @@
             <div class="content-profile">
                 <div class="content-profile-container">
                     <div class="content-profile-column">
-                        <h1 class="content-profile-column-text">Date create account: {{ user.date_joined }}</h1>
+                        <h1 class="content-profile-column-text">Date create account: {{ profile.date_joined }}</h1>
                     </div>
                     <div class="content-profile-column">
-                        <h1 class="content-profile-column-text">Last login: {{ user.last_login }}</h1>
+                        <h1 class="content-profile-column-text">Last login: {{ profile.last_login }}</h1>
                     </div>
                 </div>
             </div>
