--- a/templates/home.html
+++ b/templates/home.html
@@ -17,11 +17,14 @@
             </div>
             <div class="content-in">
                 <nav class="content-in-homenav">
-                    <a href="" class="content-in-homenav-items">
-                        <ul class="content-in-homenav-items-link">
-                            link
-                        </ul>
-                    </a>
+                    {% for i in theme %}
+                        <a href="" class="content-in-homenav-items">
+                            <ul class="content-in-homenav-items-link">
+                                {{ i.name }}
+                                <img src="{{ i.image }}" alt="">
+                            </ul>
+                        </a>
+                    {% endfor %}
                 </nav>
             </div>
         </div>
