--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
             <div class="content-in">
                 <nav class="content-in-homenav">
                     {% for i in theme %}
-                        <a href="" class="content-in-homenav-items">
+                        <a href="theme/{{ i.slug }}" class="content-in-homenav-items">
                             <ul class="content-in-homenav-items-link">
                                 {{ i.name }}
                                 <img src="{{ i.image }}" alt="">
