--- a/templates/forum/article.html
+++ b/templates/forum/article.html
@@ -1,19 +1,19 @@
 {% extends 'index.html' %}
 {% block title %}
-    Create Theme - RoflanZdarova
+    Create Article - RoflanZdarova
 {% endblock %}
 
 {% block content %}
     <div class="content">
         <div class="container">
             <div class="common-subtitle">
-                <h1 class="common-subtitle-text">Create Theme
+                <h1 class="common-subtitle-text">Create article
                 </h1>
             </div>
-            <form action="{% url 'theme' %}" class="form-login" method="post" enctype="multipart/form-data">
+            <form action="{% url 'article' %}" class="form-login" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form }}
-                <input type="submit" value="Add theme on the forum"
+                <input type="submit" value="Add article on the forum"
                        class="form-login-submit">
             </form>
 
