--- a/templates/home.html
+++ b/templates/home.html
@@ -1,38 +1,37 @@
 {% extends 'index.html' %}
 {% block title %}
-    RoflanZdarova - Forum
+    RoflanZdarova - Main Page
 {% endblock %}
 
 {% block content %}
-    <div class="content">
+    <div class="home">
         <div class="container">
-            <div class="common-title">
-                <h1 class="common-title-text">RoflanZdarova
-                    - Welcome in Forum!
-                </h1>
-            </div>
-            <div class="common-subtitle">
-                <h1 class="common-subtitle-text">Themes
-                </h1>
-
-            </div>
-            <div class="content-in">
-                    {% if user.is_staff == True %}
-                        <div class="content-in-theme">
-                            <a href="{% url 'theme' %}" class="content-in-theme-btn">
-                                Create theme
-                            </a>
+            <div class="home-in">
+                <div class="home-in-top">
+                    <div class="home-in-top-articles">
+                    {% for theme in theme %}
+                        {% for article in latest_articles %}
+                        <div class="home-in-top-articles-item">
+                                <a href="theme/{{ theme.name }}/{{ article.name }}" class="home-in-top-articles-item-link">
+                                    {{ article.name }}
+                                </a>
                         </div>
-                    {% else %}{% endif %}
-                <nav class="content-in-homenav">
-                    {% for i in theme %}
-                        <a href="theme/{{ i.slug }}" class="content-in-homenav-items">
-                            <ul class="content-in-homenav-items-link">
-                                {{ i.name }}
-                            </ul>
-                        </a>
-                    {% endfor %}
-                </nav>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="home-in-mid">
+                    <div class="home-in-mid-title">
+                        <h1 class="home-in-mid-title-text">ALL THEMES</h1>
+                    </div>
+                    <div class="home-in-mid-themes">
+                            <div class="home-in-mid-themes-item">
+                                <a href="theme/{{ theme.slug }}" class="home-in-mid-themes-item-btn">
+                                    {{ theme.name }}
+                                </a>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
