--- a/users/static/users/css/style.css
+++ b/users/static/users/css/style.css
@@ -1,4 +1,3 @@
-/* DEFAULT */
 @import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap");
 *, *:before, *:after {
   box-sizing: border-box;
@@ -24,8 +23,8 @@ body {
   padding: 0;
   overflow-x: hidden;
   -ms-overflow-x: hidden;
-  background: #494949;
   font-family: "Rajdhani", sans-serif;
+  background: #1e1e1e;
 }
 
 ul {
@@ -61,263 +60,290 @@ a {
   text-align: center;
 }
 
-/* /DEFAULT */
-/* COMMON BLOCKS */
-.common-title {
-  max-width: 800px;
-  margin: 0 auto 30px auto;
-  background: #000;
-  border-radius: 0 0 20px 20px;
-  height: 47px;
-  text-align: center;
-}
-.common-title-text {
-  height: 47px;
-  font-size: 40px;
-  font-weight: 600;
-  color: #fff;
-  text-transform: uppercase;
-}
-.common-subtitle {
-  max-width: 800px;
-  margin: 30px auto 0 auto;
-  background: #000;
-  border-radius: 20px 20px 0 0;
-  height: 47px;
-  text-align: center;
-}
-.common-subtitle-text {
-  height: 47px;
-  font-size: 40px;
-  font-weight: 600;
-  color: #fff;
-  text-transform: uppercase;
+.container {
+  width: 95%;
+  margin: 0 auto;
 }
 
-/* /COMMON BLOCKS */
-/* HEADER */
-header {
-  max-width: 100vw;
-  width: 100vw;
-  background: black;
-  height: 90px;
+/* DEFAULT END */
+/* COMMON START */
+.common {
+  max-width: 800px;
+  margin: 20px auto 0 auto;
   text-align: center;
+}
+.common input:last-child {
+  margin: 15px 0 0 0;
+}
+.common-form {
+  display: flex;
+  flex-direction: column;
+}
+.common-form-input {
+  width: 100%;
+  margin: 0 0 15px 0;
+  font-family: "Rajdhani", sans-serif;
+  font-weight: 300;
+  font-size: 25px;
+  height: 50px;
+  color: #fff;
+  background: #000000;
+  border: 1px solid #f8bc03;
+  transition: background, border 0.5s ease;
+}
+.common-form-input:active {
+  background: #1e1e1e;
+  border: #d2961e;
+}
+.common-form-submit {
+  width: 100%;
+  font-family: "Rajdhani", sans-serif;
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 25px;
+  height: 50px;
+  color: #fff;
+  background: #000000;
+  border: 1px solid #f8bc03;
+  transition: background, font-weight 0.5s ease;
+  cursor: pointer;
+}
+.common-form-submit:hover {
+  font-weight: 700;
+  background: #1e1e1e;
+}
+
+/* COMMON END */
+/* HEADER START */
+header {
+  height: 70px;
+  position: relative;
+  top: 0;
+  background: #000;
+  width: 100%;
+  border-bottom: #d2961e solid 10px;
 }
 header .header-in {
-  height: 90px;
+  height: 50px;
+  margin: 10px 0 10px 0;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
-header .header-in-logo {
-  width: 90px;
-  height: 90px;
+header .header-in-left-logo {
+  display: flex;
 }
-header .header-in-logo a {
-  display: inline-block;
-  height: 90px;
+header .header-in-left-logo-container {
+  display: flex;
+  flex-direction: column;
+}
+header .header-in-left-logo-container-title-text {
+  font-size: 25px;
   color: #fff;
+  text-transform: uppercase;
 }
-header .header-in-logo a img {
-  width: 90px;
+header .header-in-left-logo-container-subtitle-text {
+  color: #fff;
+  font-size: 15px;
+  text-transform: lowercase;
+  text-align: right;
+}
+header .header-in-left-logo-image {
+  width: 100%;
+}
+header .header-in-left-logo-image-icon {
+  width: 50px;
   height: auto;
-  transition: 0.13s border linear;
 }
-header .header-in-logo a img:hover {
-  border: 3px #fff solid;
-  border-radius: 100%;
+header .header-in-right-navbar {
+  display: flex;
 }
-header .header-in-nav-navbar-items {
-  width: 100px;
-  height: 30px;
+@media (max-width: 450px) {
+  header .header-in-right-navbar {
+    display: none;
+  }
 }
-header .header-in-nav-navbar-items-link {
-  font-weight: 500;
-  font-size: 20px;
+header .header-in-right-navbar-item {
+  margin: 0 10px 0 0;
+}
+header .header-in-right-navbar-item:last-child {
+  margin: 0;
+}
+header .header-in-right-navbar-item-link {
+  font-size: 25px;
   text-decoration: none;
   color: #fff;
-  transition: 0.1s border linear;
+  text-transform: uppercase;
+  font-weight: 300;
+  transition: font-weight 0.5s ease;
 }
-header .header-in-nav-navbar-items-link:hover {
-  border: 2.5px #fff solid;
-  border-radius: 5px;
+header .header-in-right-navbar-item-link:hover {
+  font-weight: 700;
 }
 
-/* /HEADER */
-/* CONTENT */
-.content-profile-header {
-  display: flex;
-  color: white;
-  height: 47px;
-  align-items: center;
-  justify-content: center;
+/* HEADER END */
+/* HOME START */
+.home-in-top {
+  margin: 20px 0 0 0;
 }
-.content-profile-container {
-  border: 1px #fff solid;
-  max-width: 800px;
-  width: 100%;
+.home-in-top-articles {
+  max-width: 650px;
   margin: 0 auto;
 }
-.content-profile-column {
-  height: 47px;
-  background: black;
-  text-align: center;
-}
-.content-profile-column-text {
-  color: #fff;
-  font-weight: 400;
-  font-size: 30px;
-}
-.content-in-theme {
-  max-width: 800px;
+.home-in-top-articles-item {
+  margin: 0 0 10px 0;
+  height: 25px;
   background: #000;
-  height: 47px;
-  margin: 0 auto;
   text-align: center;
-  border: 1px #000 solid;
-  transition: border 0.1s linear;
 }
-.content-in-theme:hover {
-  border: 1px #fff solid;
-}
-.content-in-theme-btn {
-  color: #fff;
-  height: 47px;
+.home-in-top-articles-item-link {
+  display: inline-block;
+  height: 25px;
   width: 100%;
-  font-size: 35px;
+  font-size: 18px;
+  color: #fff;
+  font-weight: 300;
+  transition: border, font-weight 0.5s ease;
 }
-.content-in-homenav {
+.home-in-top-articles-item-link:hover {
+  font-weight: 700;
+  border: 1px #f8bc03 solid;
+}
+.home-in-mid {
+  margin: 20px 0 15px 0;
+}
+.home-in-mid-title {
+  border: 3px #d2961e solid;
+  background: #000;
+  align-items: center;
+}
+.home-in-mid-title span {
+  cursor: pointer;
+}
+.home-in-mid-title span:hover {
+  color: #d2961e;
+}
+.home-in-mid-title span:active {
+  color: #f8bc03;
+}
+.home-in-mid-title-text {
+  color: #fff;
+  font-size: 40px;
+  text-transform: uppercase;
+  text-align: center;
+}
+.home-in-mid-themes {
+  max-width: 800px;
+  margin: 20px auto 0 auto;
   display: flex;
   flex-wrap: wrap;
-  max-width: 800px;
-  margin: 0 auto;
+  text-align: center;
 }
-.content-in-homenav-items {
-  width: 30%;
-  justify-content: space-between;
-  margin: 5px 11px 5px 11px;
+.home-in-mid-themes-item {
+  width: 33.3333%;
+  margin: 30px auto 40px auto;
+}
+@media (max-width: 700px) {
+  .home-in-mid-themes-item {
+    width: 50%;
+  }
+}
+@media (max-width: 450px) {
+  .home-in-mid-themes-item {
+    width: 100%;
+  }
+}
+.home-in-mid-themes-item-btn {
   background: #000;
-  height: 30px;
-  text-align: center;
-  transition: 0.1s border linear;
+  border: 1px #d2961e solid;
+  padding: 25px 50px;
   color: #fff;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 300;
+  transition: background, font-weight 0.5s ease;
 }
-.content-in-homenav-items:hover {
-  border: 1px white solid;
+.home-in-mid-themes-item-btn:hover {
+  font-weight: 700;
+  background: #1e1e1e;
 }
-.content-in-homenav-items-link {
-  font-size: 21px;
+.home-in-mid-profile {
+  display: flex;
+  flex-direction: row;
+}
+.home-in-mid-profile-picture {
+  display: flex;
+  flex-direction: column;
+  max-width: 25%;
+  width: 25%;
+  border: 3px #d2961e solid;
+  border-top: none;
   background: #000;
 }
-
-/* /CONTENT */
-/* FORM */
-.form-login {
+.home-in-mid-profile-picture-edit {
+  border-bottom: 3px #d2961e solid;
   text-align: center;
-  align-items: center;
+  font-size: 20px;
+  color: #d2961e;
+  background: #000000;
+  font-weight: 300;
+  transition: background, font-weight 0.5s ease;
+}
+.home-in-mid-profile-picture-edit span {
+  font-weight: 100;
+}
+.home-in-mid-profile-picture-edit:hover {
+  background: #1e1e1e;
+  font-weight: 700;
+}
+.home-in-mid-profile-picture-image {
+  max-width: 200px;
   width: 100%;
-  max-width: 800px;
+  height: auto;
+  margin: 0 auto 10px auto;
+}
+.home-in-mid-profile-item {
+  width: 100%;
+  max-width: 1000px;
   margin: 0 auto;
 }
-.form-login-input {
-  max-width: 800px;
-  width: 100%;
-  height: 47px;
-  background: black;
-  color: #fff;
-  border: 1px #000 solid;
-  font-size: 25px;
-  font-family: "Rajdhani", sans-serif;
-  font-weight: 400;
-  outline: none;
-}
-.form-login-input:active {
-  border: 1px white solid;
-}
-.form-login-input:hover {
-  border: 1px white solid;
-}
-.form-login-submit {
-  max-width: 800px;
-  width: 100%;
-  height: 47px;
-  background: black;
-  color: #fff;
-  border: 1px #000 solid;
-  border-radius: 0 0 20px 20px;
-  font-size: 25px;
-  font-family: "Rajdhani", sans-serif;
-  font-weight: 400;
-}
-.form-login-submit:hover {
-  border: 1px white solid;
-}
-
-/* /FORM */
-/* POPUP */
-.popup {
-  display: none;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  overflow: hidden;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  z-index: 99;
-  padding: 30px 0;
-}
-.popup-logout {
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: white;
-  max-width: 320px;
-  width: 100%;
-  height: 150px;
-  margin: 0 auto;
-  border-radius: 10px;
-}
-.popup-logout-in-title {
+.home-in-mid-profile-item-edit {
+  display: inline-block;
+  border: 3px #d2961e solid;
+  border-top: none;
+  border-left: none;
   text-align: center;
-  margin: 0 0 30px 0;
+  font-size: 20px;
+  color: #d2961e;
+  background: #000000;
+  font-weight: 300;
+  transition: background, font-weight 0.5s ease;
+  width: 100%;
 }
-.popup-logout-in-title-text {
-  font-size: 30px;
+.home-in-mid-profile-item-edit span {
+  font-weight: 100;
 }
-.popup-logout-in-login {
+.home-in-mid-profile-item-edit:hover {
+  background: #1e1e1e;
+  font-weight: 700;
+}
+.home-in-mid-profile-item-block {
+  max-width: 1000px;
+  width: 100%;
+}
+.home-in-mid-profile-item-block-text {
+  display: inline-block;
+  max-width: 1000px;
+  width: 100%;
   text-align: center;
-}
-.popup-logout-in-login-btn {
-  margin: 0 10px 0 10px;
-  font-size: 25px;
-  color: black;
-}
-.popup-logout-in-login-btn:hover {
-  text-decoration: underline;
+  font-size: 35px;
+  color: #fff;
+  background: #000000;
+  border: #d2961e 3px solid;
+  border-top: none;
+  border-left: none;
 }
 
-/* /POPUP */
-/* HELP */
-.help-staff {
-  display: none;
-  width: 110px;
-  max-width: 110px;
-  top: 90px;
-  left: 56%;
-}
-.help-staff-text {
-  margin: 0;
-  width: 110px;
-  font-size: 13px;
-}
-
-/* HELP */
+/* HOME END */
 
 /*# sourceMappingURL=style.css.map */
