--- a/users/static/users/css/style.scss
+++ b/users/static/users/css/style.scss
@@ -1,4 +1,3 @@
-/* DEFAULT */
 *, *:before, *:after{
   box-sizing: border-box;
 }
@@ -19,8 +18,8 @@ body{
   padding: 0;
   overflow-x: hidden;
   -ms-overflow-x: hidden;
-  background: #494949;
   font-family: 'Rajdhani', sans-serif;
+  background: #1e1e1e;
 }
 ul{
   margin: 0;
@@ -34,107 +33,145 @@ a{
   width: 10px;
 }
 ::placeholder {
-   text-align: center;
+  text-align: center;
 }
 ::-webkit-input-placeholder {
-   text-align: center;
+  text-align: center;
 }
 :-moz-placeholder {
-   text-align: center;
+  text-align: center;
 }
 ::-moz-placeholder {
-   text-align: center;
+  text-align: center;
 }
 :-ms-input-placeholder {
-   text-align: center;
+  text-align: center;
 }
+.container{
+  width: 95%;
+  margin: 0 auto;
+}
+/* DEFAULT END */
 
-/* /DEFAULT */
-
-/* COMMON BLOCKS */
+/* COMMON START */
 .common{
 
-  &-title{
-    max-width: 800px;
-    margin: 0 auto 30px auto;
-    background: #000;
-    border-radius: 0 0 20px 20px;
-    height: 47px;
-    text-align: center;
-    &-text{
-      height: 47px;
-      font-size: 40px;
-      font-weight: 600;
-      color: #fff;
-      text-transform: uppercase;
-    }
-  }
+  max-width: 800px;
+  margin: 20px auto 0 auto;
+  text-align: center;
 
-  &-subtitle{
-    max-width: 800px;
-    margin: 30px auto 0 auto;
-    background: #000;
-    border-radius: 20px 20px 0 0;
-    height: 47px;
-    text-align: center;
-    &-text{
-      height: 47px;
-      font-size: 40px;
-      font-weight: 600;
+  & input:last-child{
+    margin: 15px 0 0 0;
+  }
+  &-form{
+    display: flex;
+    flex-direction: column;
+    &-input{
+      width: 100%;
+      margin: 0 0 15px 0;
+      font-family: 'Rajdhani', sans-serif;
+      font-weight: 300;
+      font-size: 25px;
+      height: 50px;
       color: #fff;
+      background: #000000;
+      border: 1px solid #f8bc03;
+      transition: background, border 0.5s ease;
+      &:active{
+        background: #1e1e1e;
+        border: #d2961e;
+      }
+    }
+    &-submit{
+      width: 100%;
+      font-family: 'Rajdhani', sans-serif;
       text-transform: uppercase;
+      font-weight: 300;
+      font-size: 25px;
+      height: 50px;
+      color: #fff;
+      background: #000000;
+      border: 1px solid #f8bc03;
+      transition: background, font-weight 0.5s ease;
+      cursor: pointer;
+      &:hover{
+        font-weight: 700;
+        background: #1e1e1e;
+      }
     }
   }
 }
+/* COMMON END */
 
-/* /COMMON BLOCKS */
-
-/* HEADER */
+/* HEADER START */
 header{
-  max-width: 100vw;
-  width: 100vw;
-  background: black;
-  height: 90px;
-  text-align: center;
+  height: 70px;
+  position: relative;
+  top:0;
+  background: #000;
+  width: 100%;
+  border-bottom: #d2961e solid 10px;
   .header-in{
-    height: 90px;
+    height: 50px;
+    margin: 10px 0 10px 0;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    &-logo{
-      width: 90px;
-      height: 90px;
-      & a{
-        display: inline-block;
-        height: 90px;
-        color: #fff;
-        & img{
-          width: 90px;
-          height: auto;
-          transition: 0.13s border linear;
-          &:hover{
-            border: 3px #fff solid;
-            border-radius: 100%;
+    &-left{
+      &-logo{
+        display: flex;
+        &-container{
+          display: flex;
+          flex-direction: column;
+          &-title{
+            &-text{
+              font-size: 25px;
+              color: #fff;
+              text-transform: uppercase;
+            }
+          }
+          &-subtitle{
+            &-text{
+              color: #fff;
+              font-size: 15px;
+              text-transform: lowercase;
+              text-align: right;
+            }
+          }
+        }
+
+        &-image{
+          width: 100%;
+          &-icon{
+            width: 50px;
+            height: auto;
           }
         }
       }
     }
-    &-nav{
 
+    &-right{
       &-navbar{
-
-        &-items{
-          width: 100px;
-          height: 30px;
+        display: flex;
+        @media(max-width: 450px){
+          &{
+            display: none;
+          }
+        }
+        &-item{
+          margin: 0 10px 0 0;
+          &:last-child{
+            margin: 0;
+          }
           &-link{
-            font-weight: 500;
-            font-size: 20px;
+            font-size: 25px;
             text-decoration: none;
             color: #fff;
-            transition: 0.1s border linear;
+            text-transform: uppercase;
+            font-weight: 300;
+            transition: font-weight 0.5s ease;
             &:hover{
-              border: 2.5px #fff solid;
-              border-radius: 5px;
+              font-weight: 700;
             }
           }
         }
@@ -142,205 +179,176 @@ header{
     }
   }
 }
+/* HEADER END */
 
-/* /HEADER */
-
-/* CONTENT */
-.content{
-
-  &-profile{
-
-    &-header{
-      display: flex;
-      color: white;
-      height: 47px;
-      align-items: center;
-      justify-content: center;
-    }
-    &-container{
-      border: 1px #fff solid;
-      max-width: 800px;
-      width: 100%;
-      margin: 0 auto;
-    }
-    &-column{
-      height: 47px;
-      background: black;
-      text-align: center;
-      &-text{
-        color: #fff;
-        font-weight: 400;
-        font-size: 30px;
-      }
-    }
-  }
+/* HOME START */
+.home{
 
   &-in{
 
-    &-theme{
-      max-width: 800px;
-      background: #000;
-      height: 47px;
-      margin: 0 auto;
-      text-align: center;
-      border: 1px #000 solid;
-      transition: border 0.1s linear;
-
-      &:hover{
-        border: 1px #fff solid;
-      }
-
-
-      &-btn{
-        color: #fff;
-        height: 47px;
-        width: 100%;
-        font-size: 35px;
-      }
-    }
-
-    &-homenav{
-      display: flex;
-      flex-wrap: wrap;
-      max-width: 800px;
-      margin: 0 auto;
-      &-items{
-        width: 30%;
-        justify-content: space-between;
-        margin: 5px 11px 5px 11px;
-        background: #000;
-        height: 30px;
-        text-align: center;
-        transition: 0.1s border linear;
-        color: #fff;
-        &:hover{
-          border: 1px white solid;
-        }
-        &-link{
-          font-size: 21px;
+    &-top{
+      margin: 20px 0 0 0;
+      &-articles{
+        max-width: 650px;
+        margin: 0 auto;
+        &-item{
+          margin: 0 0 10px 0;
+          height: 25px;
           background: #000;
+          text-align: center;
+          &-link{
+            display: inline-block;
+            height: 25px;
+            width: 100%;
+            font-size: 18px;
+            color: #fff;
+            font-weight: 300;
+            transition: border, font-weight 0.5s ease;
+            &:hover{
+              font-weight: 700;
+              border: 1px #f8bc03 solid;
+            }
+          }
         }
       }
     }
-  }
-}
-
-/* /CONTENT */
-
-/* FORM */
-.form{
-
-  &-login{
-    text-align: center;
-    align-items: center;
-    width: 100%;
-    max-width: 800px;
-    margin: 0 auto;
-    &-input{
-      max-width: 800px;
-      width: 100%;
-      height: 47px;
-      background: black;
-      color: #fff;
-      border: 1px #000 solid;
-      font-size: 25px;
-      font-family: 'Rajdhani', sans-serif;
-      font-weight: 400;
-      outline: none;
-      &:active{
-        border: 1px white solid;
-      }
-      &:hover{
-        border: 1px white solid;
-      }
-    }
-    &-submit{
-      max-width: 800px;
-      width: 100%;
-      height: 47px;
-      background: black;
-      color: #fff;
-      border: 1px #000 solid;
-      border-radius: 0 0 20px 20px;
-      font-size: 25px;
-      font-family: 'Rajdhani', sans-serif;
-      font-weight: 400;
-      &:hover{
-        border: 1px white solid;
-      }
-    }
-  }
-}
-
-/* /FORM */
-
-/* POPUP */
-.popup{
-    display: none;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    overflow: hidden;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-    z-index: 99;
-    padding:30px 0;
-  &-logout{
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: white;
-    max-width: 320px;
-    width: 100%;
-    height: 150px;
-    margin: 0 auto;
-    border-radius: 10px;
-    &-in{
+    &-mid{
+      margin: 20px 0 15px 0;
       &-title{
-        text-align: center;
-        margin: 0 0 30px 0;
+        border: 3px #d2961e solid;
+        background: #000;
+        align-items: center;
+        & span{
+          cursor: pointer;
+
+          &:hover{
+            color: #d2961e;
+          }
+          &:active{
+            color: #f8bc03;
+          }
+        }
         &-text{
-          font-size: 30px;
+          color: #fff;
+          font-size: 40px;
+          text-transform: uppercase;
+          text-align: center;
         }
       }
-      &-login{
+
+      &-themes{
+        max-width: 800px;
+        margin: 20px auto 0 auto;
+        display: flex;
+        flex-wrap: wrap;
         text-align: center;
-        &-btn{
-          margin: 0 10px 0 10px;
-          font-size: 25px;
-          color: black;
-          &:hover{
-            text-decoration: underline;
+
+        &-item{
+          width: 33.3333%;
+          margin: 30px auto 40px auto;
+          @media (max-width: 700px){
+            &{
+              width: 50%;
+            }
+          }
+          @media (max-width: 450px){
+            &{
+              width: 100%;
+            }
+          }
+          &-btn{
+            background: #000;
+            border: 1px #d2961e solid;
+            padding: 25px 50px;
+            color: #fff;
+            text-transform: uppercase;
+            font-size: 18px;
+            font-weight: 300;
+            transition: background, font-weight 0.5s ease;
+            &:hover{
+              font-weight: 700;
+              background: #1e1e1e;
+            }
+          }
+        }
+      }
+      &-profile{
+        display: flex;
+        flex-direction: row;
+        &-picture{
+          display: flex;
+          flex-direction: column;
+          max-width: 25%;
+          width: 25%;
+          border: 3px #d2961e solid;
+          border-top: none;
+          background: #000;
+          &-edit{
+            border-bottom: 3px #d2961e solid;
+            text-align: center;
+            font-size: 20px;
+            color: #d2961e;
+            background: #000000;
+            font-weight: 300;
+            transition: background, font-weight 0.5s ease;
+            & span{
+              font-weight: 100;
+            }
+            &:hover{
+              background: #1e1e1e;
+              font-weight: 700;
+            }
+          }
+          &-image{
+            max-width: 200px;
+            width: 100%;
+            height: auto;
+            margin: 0 auto 10px auto;
+          }
+        }
+        &-item{
+          width: 100%;
+          max-width: 1000px;
+          margin: 0 auto;
+          &-edit{
+            display: inline-block;
+            border: 3px #d2961e solid;
+            border-top: none;
+            border-left: none;
+            text-align: center;
+            font-size: 20px;
+            color: #d2961e;
+            background: #000000;
+            font-weight: 300;
+            transition: background, font-weight 0.5s ease;
+            width: 100%;
+            & span{
+              font-weight: 100;
+            }
+            &:hover{
+              background: #1e1e1e;
+              font-weight: 700;
+            }
+          }
+          &-block{
+            max-width: 1000px;
+            width: 100%;
+            &-text{
+              display: inline-block;
+              max-width: 1000px;
+              width: 100%;
+              text-align: center;
+              font-size: 35px;
+              color: #fff;
+              background: #000000;
+              border: #d2961e 3px solid;
+              border-top: none;
+              border-left: none;
+            }
           }
         }
       }
     }
   }
 }
-/* /POPUP */
-
-/* HELP */
-.help{
-
-  &-staff{
-    display: none;
-    width: 110px;
-    max-width: 110px;
-    top: 90px;
-    left: 56%;
-    &-text{
-      margin: 0;
-      width: 110px;
-      font-size: 13px;
-    }
-  }
-}
-/* HELP */
-
+/* HOME END */
