--- a/users/static/users/css/style.css
+++ b/users/static/users/css/style.css
@@ -276,6 +276,7 @@ header .header-in-right-navbar-item-link:hover {
   flex-direction: column;
   max-width: 25%;
   width: 25%;
+  height: 250px;
   border: 3px #d2961e solid;
   border-top: none;
   background: #000;
@@ -297,9 +298,9 @@ header .header-in-right-navbar-item-link:hover {
   font-weight: 700;
 }
 .home-in-mid-profile-picture-image {
-  max-width: 200px;
+  max-width: 100%;
   width: 100%;
-  height: auto;
+  height: 100%;
   margin: 0 auto 10px auto;
 }
 .home-in-mid-profile-item {
