--- a/users/static/users/css/style.scss
+++ b/users/static/users/css/style.scss
@@ -280,6 +280,7 @@ header{
           flex-direction: column;
           max-width: 25%;
           width: 25%;
+          height: 250px;
           border: 3px #d2961e solid;
           border-top: none;
           background: #000;
@@ -300,9 +301,9 @@ header{
             }
           }
           &-image{
-            max-width: 200px;
+            max-width: 100%;
             width: 100%;
-            height: auto;
+            height: 100%;
             margin: 0 auto 10px auto;
           }
         }
